--- a/app/views/service_requests/_service_request.html.slim
+++ b/app/views/service_requests/_service_request.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag service_request do
-  .row.pt-2.px-2.table-row-top.text-center.mt-2 data-controller='requests' style="background-color:#{service_request.background};#{ service_request.important? ? 'border-color:#d9534f' : ''};" data-requests-url-value="#{service_request_btn_path(service_request_id: service_request.id)}"
+  .row.pt-2.px-2.table-row-top.text-center.mt-2 id="show" data-controller='requests' style="background-color:#{service_request.background};#{ service_request.important? ? 'border-color:#d9534f' : ''};" data-requests-url-value="#{service_request_btn_path(service_request_id: service_request.id)}"
     .col-sm-2.my-table-centered
       .d-block.d-sm-none.text-muted
         | Created
